Se cambio de lugar el archivo de css

--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@ h3 {
   margin: 10rem auto;
   padding: 5rem;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
-  background: url("/assets/img/fondo.PNG") center no-repeat;
+  background: url("assets/img/fondo.PNG") center no-repeat;
   background-size: 100% 100%;
 }
 
